# Python-for-Data-Science

./: .gitignore  README.md
Python-0-Starting/: README.md
Python-0-Starting/ex00/: Hello.py
Python-0-Starting/ex01/: format_ft_time.py
Python-0-Starting/ex02/: find_ft_type.py
Python-0-Starting/ex03/: NULL_not_found.py
Python-0-Starting/ex04/: whatis.py
Python-0-Starting/ex05/: building.py
Python-0-Starting/ex06/: filterstring.py  ft_filter.py
Python-0-Starting/ex07/: sos.py
Python-0-Starting/ex08/: Loading.py  tester.py
Python-0-Starting/ex09/: LICENSE  README.md  pyproject.toml
Python-0-Starting/ex09/ft_package/: pyproject.toml
Python-0-Starting/ex09/src/ft_package/: ft_package.py
Python-0-Starting/ex09/tests/: tester.py
Python-1-Array/: README.md
Python-1-Array/ex00/: give_bmi.py  tester.py
Python-1-Array/ex01/: array2D.py  tester.py
Python-1-Array/ex02/: load_image.py
Python-1-Array/ex03/: load_image.py  zoom.py
Python-1-Array/ex04/:  rotate.py  load_image.py  rotate.py
Python-1-Array/ex05/: load_image.py  pimp_image.py  tester.py
Python-2-DataTable/: README.md
Python-2-DataTable/ex00/: tester.py
Python-2-DataTable/ex01/: aff_life.py
Python-2-DataTable/ex02/: aff_pop.py
Python-2-DataTable/ex03/: load_csv.py  projection_life.py
Python-3-OOP/: README.md
Python-3-OOP/ex00/: tester.py
Python-3-OOP/ex01/: S1E7.py
Python-3-OOP/ex02/: DiamondTrap.py  S1E7.py  S1E9.py
Python-3-OOP/ex03/: ft_calculator.py
Python-3-OOP/ex04/: ft_calculator.py
Python-4-Dod/: README.md
Python-4-Dod/ex00/: statistics.py  tester.py
(+8 files in other folders)
