[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="mbrettsc", email="mbrettsc@student.42wolfsburg.de" },
]
readme = "README.md"
license = { text = "MIT" }
description = " A sample test package"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/mbrettsc/Python-for-Data-Science/tree/main/Python-0-Starting/ex09/"
