[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package_mbrettsc"
version = "0.0.1"
authors = [
  { name="mbrettsc", email="mbrettsc@student.42wolfsburg.de" },
]
description = " A sample test package"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mbrettsc/Python-for-Data-Science/tree/main/Python-0-Starting/ex09/ft_package"